--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Awesome font -->
   <script src="https://kit.fontawesome.com/717b865b49.js" crossorigin="anonymous"></script>
-  <title>Indoor Plantation</title>
+  <title>Jungle School</title>
 </head>
 
 <div class="container">
